--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body, input, textarea {
 button, label, h1, input, textarea {
 	font-family: "Open Sans", "Verdana", sans-serif;
 	font-weight: 100;
-	font-size: 24px;
+	font-size: 22px;
 }
 
 button {
@@ -25,7 +25,7 @@ button {
 	border: none;
 	background-color: #1ABF4F;
 	color: #fff;
-	font-size: 24px;
+	font-size: 22px;
 	cursor: pointer;
 }
 
@@ -36,9 +36,10 @@ input {
 	width: 70px;
 	height: 70px;
 	margin: 10px;
+	margin-top: 30px;
 	padding: 8px;
 	text-align: center;
-	font-size: 60px;
+	font-size: 54px;
 }
 
 .work {	
