--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@ li {
 	text-align: left;
 	color: #fff;
 	cursor: hand;
-	margin: -20px 10px;
+	margin: -20px auto;
 }
 
 .td-item {
@@ -84,6 +84,7 @@ li {
 	height: 20px;
 	font-size: 16px;
 	margin: 10px;
+	margin-bottom: 20px;
 	text-align: left;
 
 
@@ -112,9 +113,10 @@ li {
 }
 
 ul {
+	width: 80%;
 	list-style: none;
 	padding: 0;
-	margin: -20px 0;
+	margin: -20px auto;
 } 
 
 input[type='checkbox'] {
